# algorithms-playground

./: .editorconfig  .gitignore  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md  requirements.txt
.github/workflows/: build.yml  lint.yml
algorithms/: CMakeLists.txt
algorithms/graphs/breadth-first-search/: CMakeLists.txt
algorithms/graphs/breadth-first-search/src/: graph.h  main.cpp
algorithms/graphs/depth-first-search/: CMakeLists.txt
algorithms/graphs/depth-first-search/src/: graph.h  main.cpp
algorithms/sort/insertion-sort/: CMakeLists.txt
algorithms/sort/insertion-sort/src/: main.c
algorithms/sort/merge-sort/: CMakeLists.txt
algorithms/sort/merge-sort/src/: main.cpp
algorithms/sort/quick-sort/: CMakeLists.txt
algorithms/sort/quick-sort/src/: main.cpp
cmake/: CheckAsan.cmake
coding_challenges/: CMakeLists.txt
coding_challenges/candy_crush_1d/: README.md
coding_challenges/candy_crush_1d/assets/: input.txt
coding_challenges/candy_crush_1d/cpp/: CMakeLists.txt
coding_challenges/candy_crush_1d/cpp/src/: CandyCrush1D.cpp  CandyCrush1D.h  main.cpp
coding_challenges/candy_crush_1d/python/: candy_crush_1d.py  main.py
coding_challenges/decompressor/: README.md
coding_challenges/decompressor/assets/: input.txt
coding_challenges/decompressor/cpp/: CMakeLists.txt
coding_challenges/decompressor/cpp/src/: Decompressor.cpp  Decompressor.h  main.cpp
coding_challenges/detect_fraudolent/: CMakeLists.txt
coding_challenges/detect_fraudolent/assets/: input.txt
coding_challenges/detect_fraudolent/cpp/: CMakeLists.txt
coding_challenges/detect_fraudolent/cpp/src/: Bank.cpp  Bank.h  Transaction.h  main.cpp
coding_challenges/differ_by_one/assets/: input.txt
coding_challenges/differ_by_one/cpp/: CMakeLists.txt
coding_challenges/differ_by_one/cpp/src/: main.cpp
coding_challenges/find_prefix_ascending/assets/: input.txt
coding_challenges/find_prefix_ascending/python/: find_prefix.py  main.py
coding_challenges/first_occurrence_sorted_array/assets/: input.txt
coding_challenges/first_occurrence_sorted_array/cpp/: CMakeLists.txt
coding_challenges/first_occurrence_sorted_array/cpp/src/: NumSearch.cpp  NumSearch.h  main.cpp
coding_challenges/fridge_recipes/cpp/: CMakeLists.txt
coding_challenges/fridge_recipes/cpp/src/: main.cpp
coding_challenges/max_length/cpp/: CMakeLists.txt
coding_challenges/max_length/cpp/src/: main.cpp
coding_challenges/minimum_deletions/cpp/: CMakeLists.txt
coding_challenges/minimum_deletions/cpp/src/: main.cpp
coding_challenges/minimun_flights/assets/: input.txt
coding_challenges/minimun_flights/python/: flight_state.py  main.py  min_flights.py
coding_challenges/money_change/cpp/: CMakeLists.txt
coding_challenges/money_change/cpp/src/: main.cpp
coding_challenges/most_recent_browser_history/assets/: input.txt
coding_challenges/most_recent_browser_history/cpp/: CMakeLists.txt
coding_challenges/most_recent_browser_history/cpp/src/: main.cpp
coding_challenges/self_driving_car/assets/: input.txt
coding_challenges/self_driving_car/cpp/: CMakeLists.txt
coding_challenges/self_driving_car/cpp/src/: main.cpp
coding_challenges/shortest_substr_on_strings/assets/: input.txt
coding_challenges/shortest_substr_on_strings/python/: main.py  shortest_substr.py
coding_challenges/space_travel/cpp/: CMakeLists.txt
coding_challenges/space_travel/cpp/src/: main.cpp
coding_challenges/words_in_word/: CMakeLists.txt
coding_challenges/words_in_word/assets/: input.txt
coding_challenges/words_in_word/src/: IWordsInWords.h  WordsInWordsDP.hpp  WordsInWordsGraph.hpp  main.cpp
data_structures/: CMakeLists.txt
data_structures/array-list/: CMakeLists.txt
data_structures/array-list/src/: array_list.h  main.cpp
data_structures/binary-tree/: CMakeLists.txt
data_structures/binary-tree/src/: binary_tree.h  main.cpp
data_structures/hash-table/: CMakeLists.txt
data_structures/hash-table/src/: hash_table.h  main.cpp
data_structures/linked-list/: CMakeLists.txt
data_structures/linked-list/src/: linked_list.h  main.cpp
data_structures/lru/cpp/: CMakeLists.txt
data_structures/lru/cpp/src/: lru.h  main.cpp
data_structures/stack/: CMakeLists.txt
data_structures/stack/src/: main.cpp  stack.h
data_structures/string-builder/: CMakeLists.txt
data_structures/string-builder/src/: main.cpp  string_builder.h
multithreading/: CMakeLists.txt
multithreading/even-odd/: CMakeLists.txt
multithreading/even-odd/src/: main.cpp
