cmake_minimum_required(VERSION 3.20)

add_subdirectory(candy_crush_1d)
add_subdirectory(decompressor)
add_subdirectory(detect_fraudolent)
add_subdirectory(differ_by_one)
# add_subdirectory(find_prefix_ascending)
add_subdirectory(first_occurrence_sorted_array)
# add_subdirectory(fridge_recipes)
add_subdirectory(max_length)
add_subdirectory(minimum_deletions)
# add_subdirectory(minimum_flights)
add_subdirectory(money_change)
add_subdirectory(most_recent_browser_history)
add_subdirectory(space_travel)
add_subdirectory(self_driving_car)
add_subdirectory(words_in_word)
